stuf/src/p2/tests/t024.err
Semantic error on line 2: Variable 'number' previously declared.
