stuf/src/p2/tests/t024.gpl
int number[10];
string number[10];
